--- a/website/concerts.html
+++ b/website/concerts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Concerts - My Concert Archive</title>
+    <title>All Concerts - Jason's Concert Archive</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -209,7 +209,7 @@
         </div>
 
         <footer class="text-center py-8 mt-12 opacity-70 text-[#f4e4c1]">
-            <p style="font-family: 'Roboto Slab', serif;">&copy; 2024 My Concert Archive</p>
+            <p style="font-family: 'Roboto Slab', serif;">&copy; 2024 Jason's Concert Archive</p>
         </footer>
     </div>
 
